--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
